[package]
name = "embedded-picofont"
version = "0.2.1"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
edition = "2018"
license = "MIT"
description = "The PICO-8 font to use with embedded-graphics"
repository = "https://github.com/althonos/embedded-picofont"
homepage = "https://github.com/althonos/embedded-picofont"
readme = "README.md"
categories = ["embedded", "no-std", "rendering"]
keywords = ["embedded", "graphics", "pico-8", "font", "monospace"]
build = "src/build.rs"

[dependencies]
embedded-graphics = "0.7.1"
[build-dependencies]
lodepng = "3.2"
bitvec = "0.19.4"
[dev-dependencies]
lodepng = "3.2"

[badges.travis-ci]
repository = "althonos/embedded-picofont"
[badges.codecov]
repository = "althonos/embedded-picofont"
service    = "github"
[badges.is-it-maintained-issue-resolution]
repository = "althonos/embedded-picofont"
[badges.maintenance]
status     = "passively-maintained"
